base/deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: myapp
  namespace: keyclock-poc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers: 
      - name: myapp
        image: nginx
        ports:
        - containerPort: 80
