base/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak-poc
spec:
  selector:
      app: keycloak
  ports:
    - port: 80
      targetPort: 80
