base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: keycloak
spec:
  to:
    kind: Service
    name: keycloak
  tls:
    termination: edge
